--- a/login page.html
+++ b/login page.html
@@ -3,11 +3,12 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Elements by BuildWith Angga</title>
+      <title>SISKAMLING | Login</title>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap") rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-      <link href="/assets/styles.css" rel="stylesheet">
+      <link href="assets/styles.css" rel="stylesheet">
+      
     </head>
     <body>
        <section class="h-100 w-100" style="box-sizing: border-box; background-color: #f5f5f5">
@@ -16,8 +17,8 @@
       style="font-family: 'Poppins', sans-serif">
       <div class="position-relative d-none d-lg-block h-100 width-left">
         <img class="position-absolute img-fluid centered"
-          src="/assets/undraw_authentication_fsn5.svg"
-          alt="" />
+          src="assets/undraw_authentication_fsn5.svg"
+          alt="not found" />
       </div>
       <div class="d-flex mx-auto align-items-left justify-content-left width-right mx-lg-0">
         <div class="right mx-lg-0 mx-auto">
@@ -26,14 +27,14 @@
           </div>
           <div class="align-items-center justify-content-center d-lg-none d-flex">
             <img class="img-fluid"
-              src="/assets/undraw_authentication_fsn5.svg"
+              src="assets/undraw_authentication_fsn5.svg"
               alt="" />
           </div>
           <h3 class="title-text">Masuk ke SISKAMLING
           </h3>
           <p class="caption-text">
-            Gunakan akun yang kamu miliki dan<br />
-            berhati-hatilah terhadap pencurian data.
+            Gunakan akun yang kamu miliki<br />
+            untuk mengakses halaman SISKAMLING
           </p>
           <form style="margin-top: 1.5rem" action="" method="post">
             <div style="margin-bottom: 1.75rem">
@@ -71,7 +72,7 @@
               </div>
             </div>
             <div class="d-flex justify-content-end" style="margin-top: 0.75rem">
-              <a href="#" class="forgot-password fst-italic">Forgot Password?</a>
+              <a href="#" class="forgot-password fst-italic">Lupa Password?</a>
             </div>
             <button class="btn btn-fill text-white d-block w-100" type="submit">
               Masuk
