--- a/homePage.html
+++ b/homePage.html
@@ -40,9 +40,9 @@
                       <img src="assets/iconProfile.svg" alt="">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#">Profil</a></li>
+                      <li><a class="dropdown-item" href="#">Transkrip</a></li>
+                      <li><a class="dropdown-item" href="#">Log Out</a></li>
                     </ul>
                   </li>
                 </ul>
