added d-flex inside col-sm-5 (button success)

--- a/transkrip.html
+++ b/transkrip.html
@@ -73,10 +73,10 @@
               </div>
             </div>
               
-            <div class="col-sm-5"> 
-             <div class="justify-content-end">
+            <div class="col-sm-5 align-self-end pb-3">
+              <div class="d-flex justify-content-end">  
               <button type="button" class="btn btn-success">Success</button> 
-             </div>
+              </div> 
            </div>
         </div>
       </div>
