--- a/homePage.html
+++ b/homePage.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-    <div class="container">
+    <div class="col-10">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid justify-content-around" style="font-family: 'Poppins', sans-serif">
               
@@ -47,9 +47,6 @@
                   </li>
                 </ul>
               </div>
-              <!-- <div class="nav-item d-flex">
-                <img src="/assets/iconProfile.svg" alt="">
-            </div> -->
             </div>
           </nav>
     </div>
