added index.php, added config.php

--- a/homePage.html
+++ b/homePage.html
@@ -12,7 +12,7 @@
       <script src="//code.jquery.com/jquery.min.js"></script>
 </head>
 <body>
-    
+  <div class="container">
     <div class="col-10">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid justify-content-around" style="font-family: 'Poppins', sans-serif">
@@ -50,5 +50,21 @@
             </div>
           </nav>
     </div>
+    <table class="table table-striped table-bordered" id="list-data" border="1px">
+      <thead>
+        <tr>
+          <th class="ctr">No.</th>
+          <th class="ctr">Hari</th>
+          <th class="ctr">Kelas</th>
+          <th>Mapel</th>
+          <th>Guru</th>
+          <th>Jam Mulai</th>
+          <th>Jam Selesai</th>
+          <th>Kehadiran</th>
+          <th width="280px;" class="ctr">Opsi</th>
+          <th width="100px;" class="ctr">Aksi</th>
+        </tr>
+      </thead>
+  </div>
 </body>
 </html>
