fixed src img upn logo

--- a/loginPage.html
+++ b/loginPage.html
@@ -23,7 +23,7 @@
       <div class="d-flex mx-auto align-items-left justify-content-left width-right mx-lg-0">
         <div class="right mx-lg-0 mx-auto">
           <div class="sec-logo-text mb-3">
-            <img class="logo-text align-self-center" src="/assets/upnLogo.png" alt="">
+            <img class="logo-text align-self-center" src="assets/upnLogo.png" alt="">
           </div>
           <div class="align-items-center justify-content-center d-lg-none d-flex">
             <img class="img-fluid"
