--- a/lapor.html
+++ b/lapor.html
@@ -25,11 +25,12 @@
                     <img src="assets/logoSiskamling.svg" alt="">
                   </a>
                 <div class="navbar-nav">
-                  <a class="nav-link active mx-4" aria-current="page" href="#">Beranda</a>
-                  <a class="nav-link mx-2" href="#">Kelas</a>
-                  <a class="nav-link mx-3" href="#">Transkrip</a>
+                  <a class="nav-link mx-4" href="homePage.html">Beranda</a>
+                  <a class="nav-link mx-2" href="kelas.html">Kelas</a>
+                  <a class="nav-link mx-3" href="transkrip.html">Transkrip</a>
+                  <a href="lapor.html">
                   <button type="button" class="btn btn-outline-danger px-4">Lapor</button>
-                  
+                  </a>
                 </div>
                 
               </div>
@@ -40,8 +41,8 @@
                       <img src="assets/iconProfile.svg" alt="">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Profil</a></li>
+                      <li><a class="dropdown-item" href="#">Keluar</a></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
@@ -55,7 +56,7 @@
         </div>
 
        <div class="container">  
-        <div class="row mt-sm-5">
+        <div class="d-flex row mt-sm-5">
             <div class="container-fluid justify-content-around" style="font-family: 'Poppins', sans-serif">
             <div class="col-sm-7 mx-5">
                 <h3 style="color: #36a5ae;">Halaman Laporan</h3>
@@ -66,9 +67,9 @@
                          <span style="color:#36a5ae;" >Jenis Laporan</span>
                          <select class="form-select form-select-sm" aria-label=".form-select-sm example">
                             <option selected></option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            <option value="1">Kekerasan</option>
+                            <option value="2">Pelecehan</option>
+                            <option value="3">Selain yang disebutkan</option>
                          </select>
                          </div>
                          <div class="mb-3">
@@ -90,7 +91,9 @@
                      <div class="col-sm-5"></div>
                     </div>
             </div>
-            <div class="col-sm-5"></div>
+            <div class="col-sm-5 mx-5">
+              <!-- <img class="img-fluid" src="/assets/lapor.svg"> --> 
+            </div>
         </div>
        </div>
 </body>
